Removed paragraph margin gap styles.  They no longer seem to be needed. (#4845)
* Removed paragraph margin gap styles.  They no longer seem to be needed.

* Add back needed paragraph styles

* add back missing file

--- a/blockbase/assets/ponyfill.css
+++ b/blockbase/assets/ponyfill.css
@@ -226,10 +226,6 @@ p {
 	margin-bottom: 1em;
 }
 
-.wp-block-column :first-child, .wp-block-group :first-child {
-	margin-top: 0;
-}
-
 .image-no-margin {
 	margin: 0;
 }
